5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4469/executions/1592_1803.log
== SUBMITION (2019-04-14 19:09:02) 
-- CODE:
digitos = int(input("Os 4 primeiros digitos da conta bancaria: "))

soma = 0

for(int contador = 2; contador < 6; contador = contador + 1):
	soma = soma + ((digitos % 10) * contador)
	digitos = digitos // 10
	
print(str(soma % 11))
-- EXECUTION TIME:
0.188606
-- ERROR:
  File "/home/codebench/codes/1592/1803/main.py", line 5
    for(int contador = 2; contador < 6; contador = contador + 1):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:09:10) 
-- CODE:
digitos = int(input("Os 4 primeiros digitos da conta bancaria: "))

soma = 0

for(int contador = 2; contador < 6; contador = contador + 1):
	soma = soma + ((digitos % 10) * contador)
	digitos = digitos // 10
	
print(soma % 11)
-- EXECUTION TIME:
0.217974
-- ERROR:
  File "/home/codebench/codes/1592/1803/main.py", line 5
    for(int contador = 2; contador < 6; contador = contador + 1):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:11:05) 
-- CODE:
digitos = int(input("Os 4 primeiros digitos da conta bancaria: "))

soma = 0

for(int contador = 2; contador < 6; contador = contador + 1):
	soma = soma + ((digitos % 10) * contador)
	digitos = digitos // 10
	
print(soma % 11)
-- EXECUTION TIME:
0.27034
-- ERROR:
  File "/home/codebench/codes/1592/1803/main.py", line 5
    for(int contador = 2; contador < 6; contador = contador + 1):
                   ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 19:11:47) 
-- CODE:
digitos = int(input("Os 4 primeiros digitos da conta bancaria: "))

contador = 2
soma = 0

while(contador < 6):
	soma = soma + ((digitos % 10) * contador)
	digitos = digitos // 10
	contador = contador + 1
	
print(soma % 11)
-- EXECUTION TIME:
0.163972
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
